--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -1490,10 +1490,41 @@ F<right.xpm>, F<move.xpm>, 8 resize cursors: F<sizeR.xpm>, F<sizeTR.xpm>,
 F<sizeT.xpm>, F<sizeTL.xpm>, F<sizeL.xpm>, F<sizeBL.xpm>, F<sizeB.xpm>,
 F<sizeBR.xpm>, and 4 scroll cursors: F<scrollL.xpm>, F<scrollR.xpm>,
 F<scrollU.xpm>, and F<scrollD.xpm>.
+
 By default an XPM header defines four dimensions: width, height, colors
 and chars-per-pixel. For cursors this must be extended to six. The last
 two are the I<x-hotspot> and the I<y-hotspot>. These define which point
 in the XPM image is the sensitive point for the mouse pointer.
+
+Instead of XPM images, a theme may use Xcursor files instead.
+These then don't have a filename extension.
+
+When a theme doesn't define a cursor, icewm falls back to the system
+cursor themes for Xcursor, if they are installed. This is configurable
+by the following environment variables:
+
+=over
+
+=item XCURSOR_PATH
+
+Where to look for themed cursors.
+
+=item XCURSOR_SIZE
+
+The cursor size in pixels.
+
+=item XCURSOR_THEME
+
+The name of the cursor theme.
+
+=back
+
+The last two can also be set as an X-resource:
+
+    Xcursor.size:       24
+    Xcursor.theme:      whiteglass
+
+Otherwise core X11 cursors are used.
 
 =item F<icons>
 
